[tool.poetry]
name = "mfscraping-asyncio"
version = "0.1.0"
description = ""
authors = ["roto5296 <hikun5296@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"
aiohttp = "^3.8.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
