[project]
name = "mfscraping-asyncio"
version = "1.0.0"
description = ""
authors = [{ name = "roto5296", email = "hikun5296@gmail.com" }]
requires-python = ">=3.11,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "beautifulsoup4>=4.9.3,<5",
    "aiohttp>=3.8.5,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mfscraping_asyncio"]

[tool.hatch.build.targets.wheel.sources]
"" = ""
